Fixed the footer so the icons and copyright are properly aligned

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -127,17 +127,19 @@ a:hover {
 
     footer {
         border-top: 1px solid black;
-        margin: 0 auto;
-        text-align: center;
-        padding-top: 10px;
-        width: 100%;
-        display: inline-block;
     }
+        .copyright {
+            padding-top: 10px;
+            text-align: right;
+            float: left;
+            width: 50%;
+        }
 
         .socialIcons {
             width: 32px;
             height: 32px;
             float: right;
+            padding-top: 5px;
         }
 
         .github {
